plugins {
    id 'java'
    id "me.champeau.jmh" version "0.6.4"
}

group 'org.openjdk.bench'
version '1.0-SNAPSHOT'

sourceCompatibility = targetCompatibility = 15

repositories {
    mavenCentral()
}

compileJmhJava {
    options.compilerArgs << '--add-exports=java.base/sun.security.util=ALL-UNNAMED'
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

jmh {
    benchmarkMode = ['thrpt'] // Benchmark mode. Available modes are: [Throughput/thrpt, AverageTime/avgt, SampleTime/sample, SingleShotTime/ss, All/all]
    iterations = 3
    warmupIterations = 1
    batchSize = 8
    fork = 1
    threads = 8
}


test {
    useJUnitPlatform()
}
